src/tests/fixtures/type_definitions_from_alias/AliasIsArrayNotLiteral.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export type Query = {
  hello: string;
}[];

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions_from_alias/AliasIsArrayNotLiteral.invalid.ts:2:21 - error: Expected `@gqlType` type to be a type literal. For example: `type Foo = { bar: string }`

If you think Grats should be able to infer this type, please report an issue at https://github.com/captbaritone/grats/issues.

2 export type Query = {
                      ~
3   hello: string;
  ~~~~~~~~~~~~~~~~
4 }[];
  ~~~
